# TO-DO-List-GUI

./: .gitignore  CMakeLists.txt  Main.qml  README.md  TODO.txt  main.cpp  mainwindow.cpp  mainwindow.ui  task.cpp  task.h  taskmanager.cpp  taskmanager.h  to_do_model.cpp  to_do_model.h  todo.cpp  todo.h
HeaderFiles/: task.h  to_do_model.h
